fix(table): cell overflow on cell type status hint

--- a/css/src/components/grid.css
+++ b/css/src/components/grid.css
@@ -354,6 +354,13 @@
   overflow: hidden;
 }
 
+.GridCell--statusHint {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  overflow: hidden;
+}
+
 .GridCell--avatar .Avatar {
   margin: 0;
 }
